--- a/SynchAadlMenu/plugin.xml
+++ b/SynchAadlMenu/plugin.xml
@@ -18,6 +18,11 @@
             name="Code Generation"
             id="SynchAadlMenu.commands.sampleCommand2">
       </command>
+      <command
+            categoryId="SynchAadlMenu.commands.category"
+            name="Search"
+            id="SynchAadlMenu.commands.sampleCommand3">
+      </command>
    </extension>
    
    
@@ -30,6 +35,10 @@
       <handler
             class="synchaadlmenu.handlers.CodeGeneration"
             commandId="SynchAadlMenu.commands.sampleCommand2">
+      </handler>
+      <handler
+            class="synchaadlmenu.handlers.SearchCommand"
+            commandId="SynchAadlMenu.commands.sampleCommand3">
       </handler>
    </extension>
    
@@ -47,6 +56,12 @@
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             contextId="org.eclipse.ui.contexts.window"
             sequence="M1+7">
+      </key>
+      <key
+            commandId="SynchAadlMenu.commands.sampleCommand3"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            contextId="org.eclipse.ui.contexts.window"
+            sequence="M1+8">
       </key>
    </extension>
    
@@ -67,6 +82,11 @@
             <command
                   commandId="SynchAadlMenu.commands.sampleCommand2"
                   id="SynchAadlMenu.menus.sampleCommand2"
+                  mnemonic="S">
+            </command>
+            <command
+                  commandId="SynchAadlMenu.commands.sampleCommand3"
+                  id="SynchAadlMenu.menus.sampleCommand3"
                   mnemonic="S">
             </command>
          </menu>
