Antlr Parser Implemented

--- a/edu.postech.xtext.maude.ide/xtend-gen/edu/postech/xtext/maude/ide/.gitignore
+++ b/edu.postech.xtext.maude.ide/xtend-gen/edu/postech/xtext/maude/ide/.gitignore
@@ -1,2 +1,6 @@
 /.MaudeIdeModule.java._trace
 /.MaudeIdeSetup.java._trace
+/.MaudeIdeModule.xtendbin
+/.MaudeIdeSetup.xtendbin
+/MaudeIdeModule.java
+/MaudeIdeSetup.java
