--- a/edu.uiuc.aadl.synch/build.properties
+++ b/edu.uiuc.aadl.synch/build.properties
@@ -6,4 +6,7 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                contexts.xml,\
-               rtmaude/
+               rtmaude/,\
+               .classpath,\
+               lib/
+jars.compile.order = .
