--- a/edu.postech.aadl.synch/plugin.xml
+++ b/edu.postech.aadl.synch/plugin.xml
@@ -6,14 +6,14 @@
          point="org.eclipse.ui.views">
       <category
             name="SynchAADL"
-            id="edu.uiuc.aadl.synch">
+            id="edu.postech.aadl.synch">
       </category>
       <view
             name="SynchAADL Verifier"
             icon="icons/sample.gif"
-            category="edu.uiuc.aadl.synch"
-            class="edu.uiuc.aadl.synch.views.SynchAadlView"
-            id="edu.uiuc.aadl.synch.views.SynchAadlView">
+            category="edu.postech.aadl.synch"
+            class="edu.postech.aadl.synch.views.SynchAadlView"
+            id="edu.postech.aadl.synch.views.SynchAadlView">
       </view>
    </extension>
    <extension
@@ -23,7 +23,7 @@
          <view
                relative="org.eclipse.ui.views.ContentOutline"
                relationship="stack"
-               id="edu.uiuc.aadl.synch.views.SynchAadlView">
+               id="edu.postech.aadl.synch.views.SynchAadlView">
          </view>
       </perspectiveExtension>
    </extension>
@@ -35,7 +35,7 @@
    </extension>
    <extension 
          point="org.eclipse.core.resources.markers"
-         id="edu.uiuc.aadl.synch.SyncAadlObjectMarker"
+         id="edu.postech.aadl.synch.SyncAadlObjectMarker"
          name="Synchrnouls AADL Marker">
       <super type="org.osate.aadl2.modelsupport.AadlObjectMarker"/>
       <persistent value="true"/>
@@ -44,14 +44,14 @@
          point="org.eclipse.ui.newWizards">
       <category
             name="SynchAADL"
-            id="edu.uiuc.aadl.synch">
+            id="edu.postech.aadl.synch">
       </category>
       <wizard
             name="SynchAADL Property Specification file"
             icon="icons/sample.gif"
-            category="edu.uiuc.aadl.synch"
-            class="edu.uiuc.aadl.synch.wizard.RtmAadlPropertyWizard"
-            id="edu.uiuc.aadl.synch.wizard.RtmAadlPropertyWizard">
+            category="edu.postech.aadl.synch"
+            class="edu.postech.aadl.synch.wizard.RtmAadlPropertyWizard"
+            id="edu.postech.aadl.synch.wizard.RtmAadlPropertyWizard">
       </wizard>
    </extension>
 
