--- a/edu.postech.aadl.xtext.propspec.ui/plugin.xml
+++ b/edu.postech.aadl.xtext.propspec.ui/plugin.xml
@@ -6,42 +6,42 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
             contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
             default="true"
             extensions="pspc"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec"
+            id="edu.postech.aadl.xtext.propspec.PropSpec"
             name="PropSpec Editor">
         </editor>
     </extension>
     <extension
         point="org.eclipse.ui.handlers">
         <handler
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclarationHandler"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclarationHandler"
             commandId="org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclaration">
             <activeWhen>
                 <reference
-                    definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+                    definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
                 </reference>
             </activeWhen>
         </handler>
         <handler
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.handler.ValidateActionHandler"
-            commandId="edu.uiuc.aadl.xtext.propspec.PropSpec.validate">
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.handler.ValidateActionHandler"
+            commandId="edu.postech.aadl.xtext.propspec.PropSpec.validate">
          <activeWhen>
             <reference
-                    definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+                    definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
             </reference>
          </activeWhen>
       </handler>
     </extension>
     <extension point="org.eclipse.core.expressions.definitions">
-        <definition id="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+        <definition id="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
             <and>
                 <reference definitionId="isActiveEditorAnInstanceOfXtextEditor"/>
                 <with variable="activeEditor">
                     <test property="org.eclipse.xtext.ui.editor.XtextEditor.languageName" 
-                        value="edu.uiuc.aadl.xtext.propspec.PropSpec" 
+                        value="edu.postech.aadl.xtext.propspec.PropSpec" 
                         forcePluginActivation="true"/>
                 </with>        
             </and>
@@ -50,33 +50,33 @@
     <extension
             point="org.eclipse.ui.preferencePages">
         <page
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
+            id="edu.postech.aadl.xtext.propspec.PropSpec"
             name="PropSpec">
-            <keywordReference id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"/>
+            <keywordReference id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"/>
         </page>
         <page
-            category="edu.uiuc.aadl.xtext.propspec.PropSpec"
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec.coloring"
+            category="edu.postech.aadl.xtext.propspec.PropSpec"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
+            id="edu.postech.aadl.xtext.propspec.PropSpec.coloring"
             name="Syntax Coloring">
-            <keywordReference id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"/>
+            <keywordReference id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"/>
         </page>
         <page
-            category="edu.uiuc.aadl.xtext.propspec.PropSpec"
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec.templates"
+            category="edu.postech.aadl.xtext.propspec.PropSpec"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
+            id="edu.postech.aadl.xtext.propspec.PropSpec.templates"
             name="Templates">
-            <keywordReference id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"/>
+            <keywordReference id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"/>
         </page>
     </extension>
     <extension
             point="org.eclipse.ui.propertyPages">
         <page
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
+            id="edu.postech.aadl.xtext.propspec.PropSpec"
             name="PropSpec">
-            <keywordReference id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"/>
+            <keywordReference id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"/>
             <enabledWhen>
 	            <adapt type="org.eclipse.core.resources.IProject"/>
 			</enabledWhen>
@@ -86,14 +86,14 @@
     <extension
         point="org.eclipse.ui.keywords">
         <keyword
-            id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"
+            id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"
             label="PropSpec"/>
     </extension>
     <extension
          point="org.eclipse.ui.commands">
       <command
             description="Trigger expensive validation"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec.validate"
+            id="edu.postech.aadl.xtext.propspec.PropSpec.validate"
             name="Validate">
       </command>
     </extension>
@@ -101,12 +101,12 @@
         <menuContribution
             locationURI="popup:#TextEditorContext?after=group.edit">
              <command
-                 commandId="edu.uiuc.aadl.xtext.propspec.PropSpec.validate"
+                 commandId="edu.postech.aadl.xtext.propspec.PropSpec.validate"
                  style="push"
                  tooltip="Trigger expensive validation">
             <visibleWhen checkEnabled="false">
                 <reference
-                    definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+                    definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
                 </reference>
             </visibleWhen>
          </command>  
@@ -116,7 +116,7 @@
 		<menuContribution locationURI="popup:#TextEditorContext?endof=group.find">
 			<command commandId="org.eclipse.xtext.ui.editor.FindReferences">
 				<visibleWhen checkEnabled="false">
-                	<reference definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+                	<reference definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
                 	</reference>
             	</visibleWhen>
 			</command>
@@ -124,11 +124,11 @@
 	</extension>
 	<extension point="org.eclipse.ui.handlers">
 	    <handler
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.findrefs.FindReferencesHandler"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.findrefs.FindReferencesHandler"
             commandId="org.eclipse.xtext.ui.editor.FindReferences">
             <activeWhen>
                 <reference
-                    definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+                    definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
                 </reference>
             </activeWhen>
         </handler>
@@ -139,19 +139,19 @@
 	<extension
 		point="org.eclipse.emf.ecore.extension_parser">
 		<parser
-			class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
+			class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
 			type="pspc">
 		</parser>
 	</extension>
 	<extension point="org.eclipse.xtext.extension_resourceServiceProvider">
         <resourceServiceProvider
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
             uriExtension="pspc">
         </resourceServiceProvider>
     </extension>
 
 
-    <!-- marker definitions for edu.uiuc.aadl.xtext.propspec.PropSpec -->
+    <!-- marker definitions for edu.postech.aadl.xtext.propspec.PropSpec -->
     <extension
             id="propspec.check.fast"
             name="PropSpec Problem"
@@ -177,27 +177,27 @@
    <extension
          point="org.eclipse.xtext.builder.participant">
       <participant
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.builder.IXtextBuilderParticipant">
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.builder.IXtextBuilderParticipant">
       </participant>
    </extension>
    <extension
             point="org.eclipse.ui.preferencePages">
         <page
-            category="edu.uiuc.aadl.xtext.propspec.PropSpec"
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec.compiler.preferencePage"
+            category="edu.postech.aadl.xtext.propspec.PropSpec"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
+            id="edu.postech.aadl.xtext.propspec.PropSpec.compiler.preferencePage"
             name="Compiler">
-            <keywordReference id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"/>
+            <keywordReference id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"/>
         </page>
     </extension>
     <extension
             point="org.eclipse.ui.propertyPages">
         <page
-            category="edu.uiuc.aadl.xtext.propspec.PropSpec"
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
-            id="edu.uiuc.aadl.xtext.propspec.PropSpec.compiler.propertyPage"
+            category="edu.postech.aadl.xtext.propspec.PropSpec"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
+            id="edu.postech.aadl.xtext.propspec.PropSpec.compiler.propertyPage"
             name="Compiler">
-            <keywordReference id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"/>
+            <keywordReference id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"/>
             <enabledWhen>
 	            <adapt type="org.eclipse.core.resources.IProject"/>
 			</enabledWhen>
@@ -209,11 +209,11 @@
 	<extension
 		point="org.eclipse.ui.handlers">
 		<handler 
-			class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.outline.quickoutline.ShowQuickOutlineActionHandler"
+			class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.outline.quickoutline.ShowQuickOutlineActionHandler"
 			commandId="org.eclipse.xtext.ui.editor.outline.QuickOutline">
 			<activeWhen>
 				<reference
-					definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+					definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
 				</reference>
 			</activeWhen>
 		</handler>
@@ -233,33 +233,33 @@
 				style="push"
 				tooltip="Open Quick Outline">
 				<visibleWhen checkEnabled="false">
-					<reference definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened"/>
+					<reference definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened"/>
 				</visibleWhen>
 			</command>
 		</menuContribution>
 	</extension>
-    <!-- quickfix marker resolution generator for edu.uiuc.aadl.xtext.propspec.PropSpec -->
+    <!-- quickfix marker resolution generator for edu.postech.aadl.xtext.propspec.PropSpec -->
     <extension
             point="org.eclipse.ui.ide.markerResolution">
         <markerResolutionGenerator
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator"
-            markerType="edu.uiuc.aadl.xtext.propspec.ui.propspec.check.fast">
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator"
+            markerType="edu.postech.aadl.xtext.propspec.ui.propspec.check.fast">
             <attribute
                 name="FIXABLE_KEY"
                 value="true">
             </attribute>
         </markerResolutionGenerator>
         <markerResolutionGenerator
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator"
-            markerType="edu.uiuc.aadl.xtext.propspec.ui.propspec.check.normal">
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator"
+            markerType="edu.postech.aadl.xtext.propspec.ui.propspec.check.normal">
             <attribute
                 name="FIXABLE_KEY"
                 value="true">
             </attribute>
         </markerResolutionGenerator>
         <markerResolutionGenerator
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator"
-            markerType="edu.uiuc.aadl.xtext.propspec.ui.propspec.check.expensive">
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator"
+            markerType="edu.postech.aadl.xtext.propspec.ui.propspec.check.expensive">
             <attribute
                 name="FIXABLE_KEY"
                 value="true">
@@ -269,11 +269,11 @@
    	<!-- Rename Refactoring -->
 	<extension point="org.eclipse.ui.handlers">
 		<handler 
-			class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.IRenameElementHandler"
+			class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.IRenameElementHandler"
 			commandId="org.eclipse.xtext.ui.refactoring.RenameElement">
 			<activeWhen>
 				<reference
-					definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+					definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
 				</reference>
 			</activeWhen>
 		</handler>
@@ -285,7 +285,7 @@
                style="push">
             <visibleWhen checkEnabled="false">
                <reference
-                     definitionId="edu.uiuc.aadl.xtext.propspec.PropSpec.Editor.opened">
+                     definitionId="edu.postech.aadl.xtext.propspec.PropSpec.Editor.opened">
                </reference>
             </visibleWhen>
          </command>
@@ -293,29 +293,29 @@
    </extension>
    <extension point="org.eclipse.ui.preferencePages">
 	    <page
-	        category="edu.uiuc.aadl.xtext.propspec.PropSpec"
-	        class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.RefactoringPreferencePage"
-	        id="edu.uiuc.aadl.xtext.propspec.PropSpec.refactoring"
+	        category="edu.postech.aadl.xtext.propspec.PropSpec"
+	        class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.RefactoringPreferencePage"
+	        id="edu.postech.aadl.xtext.propspec.PropSpec.refactoring"
 	        name="Refactoring">
-	        <keywordReference id="edu.uiuc.aadl.xtext.propspec.ui.keyword_PropSpec"/>
+	        <keywordReference id="edu.postech.aadl.xtext.propspec.ui.keyword_PropSpec"/>
 	    </page>
 	</extension>
 
   <extension point="org.eclipse.compare.contentViewers">
-    <viewer id="edu.uiuc.aadl.xtext.propspec.PropSpec.compare.contentViewers"
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
+    <viewer id="edu.postech.aadl.xtext.propspec.PropSpec.compare.contentViewers"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
             extensions="pspc">
     </viewer>
   </extension>
   <extension point="org.eclipse.compare.contentMergeViewers">
-    <viewer id="edu.uiuc.aadl.xtext.propspec.PropSpec.compare.contentMergeViewers"
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
+    <viewer id="edu.postech.aadl.xtext.propspec.PropSpec.compare.contentMergeViewers"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
             extensions="pspc" label="PropSpec Compare">
      </viewer>
   </extension>
   <extension point="org.eclipse.ui.editors.documentProviders">
-    <provider id="edu.uiuc.aadl.xtext.propspec.PropSpec.editors.documentProviders"
-            class="edu.uiuc.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.model.XtextDocumentProvider"
+    <provider id="edu.postech.aadl.xtext.propspec.PropSpec.editors.documentProviders"
+            class="edu.postech.aadl.xtext.propspec.ui.PropSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.model.XtextDocumentProvider"
             extensions="pspc">
     </provider>
   </extension>
