--- a/edu.postech.aadl.builder/plugin.xml
+++ b/edu.postech.aadl.builder/plugin.xml
@@ -3,68 +3,106 @@
 <plugin>
 
    <extension
-         id="AADLModelInstanceBuilder"
-         name="AADL Model Instance Builder"
+         id="sampleBuilder"
+         name="Sample Project Builder"
          point="org.eclipse.core.resources.builders">
       <builder
             hasNature="true">
          <run
-               class="edu.postech.aadl.builder.builder.AADLModelInstanceBuilder">
+               class="edu.postech.aadl.builder.builder.SampleBuilder">
          </run>
       </builder>
    </extension>
    <extension
-         id="simpleNature"
-         name="Simple Project Nature"
+         id="sampleNature"
+         name="Sample Project Nature"
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run
-               class="edu.postech.aadl.builder.builder.SimpleNature">
+               class="edu.postech.aadl.builder.builder.SampleNature">
          </run>
       </runtime>
       <builder
-            id="edu.postech.aadl.builder.AADLModelInstanceBuilder">
+            id="edu.postech.aadl.builder.sampleBuilder">
       </builder>
    </extension>
    <extension
          point="org.eclipse.ui.commands">
+      <category
+            id="edu.postech.aadl.builder.sampleNature.category"
+            name="Sample Project Nature commands">
+      </category>
       <command
-            defaultHandler="edu.postech.aadl.builder.builder.AddBuilder"
-            id="edu.postech.aadl.builder.commands.AddBuilder"
-            name="Add Custom Builder">
-      </command>
-      <command
-            defaultHandler="edu.postech.aadl.builder.builder.RemoveBuilder"
-            id="edu.postech.aadl.builder.commands.RemoveBuilder"
-            name="Remove Custom Builder">
+            categoryId="edu.postech.aadl.builder.sampleNature.category"
+            defaultHandler="edu.postech.aadl.builder.builder.AddRemoveSampleNatureHandler"
+            id="edu.postech.aadl.builder.addRemoveSampleNature"
+            name="Add/RemoveSample Project Nature">
       </command>
    </extension>
-   
    <extension
-      point="org.eclipse.ui.menus">
-   <menuContribution
-         allPopups="false"
-         locationURI="popup:org.eclipse.ui.projectConfigure?after=additions">
-      <command
-            commandId="edu.postech.aadl.builder.commands.AddBuilder"
-            style="push">
-      </command>
-      <command
-            commandId="edu.postech.aadl.builder.commands.RemoveBuilder"
-            style="push">
-      </command>
-   </menuContribution>
-	</extension>
-   
-	<extension
-      point="org.eclipse.core.expressions.propertyTesters">
-   <propertyTester
-         class="edu.postech.aadl.builder.builder.TestBuilderEnabled"
-         id="edu.postech.aadl.builder.myBuilderTester"
-         namespace="cedu.postech.aadl.builder"
-         properties="isEnabled"
-         type="java.lang.Object">
-   </propertyTester>
-	</extension>
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.projectConfigure?after=additions">
+         <command
+               label="Disable Sample builder"
+               commandId="edu.postech.aadl.builder.addRemoveSampleNature"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="selection">
+                  <count
+                        value="1">
+                  </count>
+                  <iterate>
+                     <adapt
+                           type="org.eclipse.core.resources.IProject">
+                        <test
+                              property="org.eclipse.core.resources.projectNature"
+                              value="edu.postech.aadl.builder.sampleNature">
+                        </test>
+                     </adapt>
+                  </iterate>
+               </with>
+            </visibleWhen>
+         </command>
+         <command
+               label="Enable Sample builder"
+               commandId="edu.postech.aadl.builder.addRemoveSampleNature"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="selection">
+                  <count
+                        value="1">
+                  </count>
+                  <iterate>
+                     <adapt
+                           type="org.eclipse.core.resources.IProject">
+                        <not>
+                           <test
+                                 property="org.eclipse.core.resources.projectNature"
+                                 value="edu.postech.aadl.builder.sampleNature">
+                           </test>
+                        </not>
+                     </adapt>
+                  </iterate>
+               </with>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         id="xmlProblem"
+         name="XML Problem"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="org.eclipse.core.resources.problemmarker">
+      </super>
+      <persistent
+            value="true">
+      </persistent>
+   </extension>
 
 </plugin>
