--- a/edu.postech.aadl.menu/plugin.xml
+++ b/edu.postech.aadl.menu/plugin.xml
@@ -4,23 +4,23 @@
    <extension
          point="org.eclipse.ui.commands">
       <category
-            id="SynchAadlMenu.commands.category"
+            id="HybridSynchAadlMenu.commands.category"
             name="Sample Category">
       </category>
       <command
-            categoryId="SynchAadlMenu.commands.category"
+            categoryId="HybridSynchAadlMenu.commands.category"
             name="Constraints Check"
-            id="SynchAadlMenu.commands.sampleCommand">
+            id="HybridSynchAadlMenu.commands.constraintsCheck">
       </command>
       <command
-            categoryId="SynchAadlMenu.commands.category"
+            categoryId="HybridSynchAadlMenu.commands.category"
             name="Code Generation"
-            id="SynchAadlMenu.commands.sampleCommand2">
+            id="HybridSynchAadlMenu.commands.codeGeneration">
       </command>
       <command
-            categoryId="SynchAadlMenu.commands.category"
+            categoryId="HybridSynchAadlMenu.commands.category"
             name="Symbolic Analysis"
-            id="SynchAadlMenu.commands.sampleCommand3">
+            id="HybridSynchAadlMenu.commands.symbolicAnalysis">
       </command>
    </extension>
    
@@ -28,8 +28,8 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="handlers.ConstraintChecker"
-            commandId="SynchAadlMenu.commands.sampleCommand">
+            class="edu.postech.aadl.menu.ConstraintChecker"
+            commandId="HybridSynchAadlMenu.commands.constraintsCheck">
 			<enabledWhen>
 			    <with variable="activeEditorId">
 			        <equals value="edu.postech.aadl.xtext.propspec.PropSpec"/>
@@ -37,8 +37,8 @@
 			</enabledWhen>
       </handler>
       <handler
-            class="handlers.CodeGeneration"
-            commandId="SynchAadlMenu.commands.sampleCommand2">
+            class="edu.postech.aadl.menu.CodeGeneration"
+            commandId="HybridSynchAadlMenu.commands.codeGeneration">
 			<enabledWhen>
 			    <with variable="activeEditorId">
 			        <equals value="edu.postech.aadl.xtext.propspec.PropSpec"/>
@@ -46,8 +46,8 @@
 			</enabledWhen>
       </handler>
       <handler
-            class="handlers.SymbolicAnalysis"
-            commandId="SynchAadlMenu.commands.sampleCommand3">
+            class="edu.postech.aadl.menu.SymbolicAnalysis"
+            commandId="HybridSynchAadlMenu.commands.symbolicAnalysis">
 			<enabledWhen>
 			    <with variable="activeEditorId">
 			        <equals value="edu.postech.aadl.xtext.propspec.PropSpec"/>
@@ -60,19 +60,19 @@
    <extension
          point="org.eclipse.ui.bindings">
       <key
-            commandId="SynchAadlMenu.commands.sampleCommand"
+            commandId="HybridSynchAadlMenu.commands.constraintsCheck"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             contextId="org.eclipse.ui.contexts.window"
             sequence="M1+5">
       </key>
       <key
-            commandId="SynchAadlMenu.commands.sampleCommand2"
+            commandId="HybridSynchAadlMenu.commands.codeGeneration"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             contextId="org.eclipse.ui.contexts.window"
             sequence="M1+6">
       </key>
       <key
-            commandId="SynchAadlMenu.commands.sampleCommand3"
+            commandId="HybridSynchAadlMenu.commands.symbolicAnalysis"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             contextId="org.eclipse.ui.contexts.window"
             sequence="M1+7">
@@ -85,22 +85,22 @@
       <menuContribution
             locationURI="menu:org.eclipse.ui.main.menu?after=additions">
          <menu
-               id="SynchAadlMenu.menus.sampleMenu"
+               id="HybridSynchAadlMenu.menus.simpleMenu"
                label="HybridSynchAADL Verifier"
                mnemonic="M">
             <command
-                  commandId="SynchAadlMenu.commands.sampleCommand"
-                  id="SynchAadlMenu.menus.sampleCommand"
+                  commandId="HybridSynchAadlMenu.commands.constraintsCheck"
+                  id="HybridSynchAadlMenu.menus.constraintsCheck"
                   mnemonic="S">
             </command>
             <command
-                  commandId="SynchAadlMenu.commands.sampleCommand2"
-                  id="SynchAadlMenu.menus.sampleCommand2"
+                  commandId="HybridSynchAadlMenu.commands.codeGeneration"
+                  id="HybridSynchAadlMenu.menus.codeGeneration"
                   mnemonic="S">
             </command>
             <command
-                  commandId="SynchAadlMenu.commands.sampleCommand3"
-                  id="SynchAadlMenu.menus.sampleCommand3"
+                  commandId="HybridSynchAadlMenu.commands.symbolicAnalysis"
+                  id="HybridSynchAadlMenu.menus.symbolicAnalysis"
                   mnemonic="S">
             </command>
          </menu>
