--- a/edu.postech.aadl.synch/plugin.xml
+++ b/edu.postech.aadl.synch/plugin.xml
@@ -1,58 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-
-   <extension
-         point="org.eclipse.ui.views">
-      <category
-            name="SynchAADL"
-            id="edu.postech.aadl.synch">
-      </category>
-      <view
-            name="SynchAADL Verifier"
-            icon="icons/sample.gif"
-            category="edu.postech.aadl.synch"
-            class="edu.postech.aadl.synch.views.SynchAadlView"
-            id="edu.postech.aadl.synch.views.SynchAadlView">
-      </view>
-   </extension>
-   <extension
-         point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension
-            targetID="org.osate.ui.perspective.AadlPerspective">
-         <view
-               relative="org.eclipse.ui.views.ContentOutline"
-               relationship="stack"
-               id="edu.postech.aadl.synch.views.SynchAadlView">
-         </view>
-      </perspectiveExtension>
-   </extension>
+   
    <extension
          point="org.eclipse.help.contexts">
       <contexts
             file="contexts.xml">
       </contexts>
    </extension>
-   <extension 
-         point="org.eclipse.core.resources.markers"
-         id="edu.postech.aadl.synch.SyncAadlObjectMarker"
-         name="Synchrnouls AADL Marker">
-      <super type="org.osate.aadl2.modelsupport.AadlObjectMarker"/>
-      <persistent value="true"/>
-   </extension>
    <extension
          point="org.eclipse.ui.newWizards">
       <category
-            name="SynchAADL"
+            name="HybridSynchAADL"
             id="edu.postech.aadl.synch">
       </category>
       <wizard
-            name="SynchAADL Property Specification file"
+            name="HybridSynchAADL Property Specification file"
             icon="icons/sample.gif"
             category="edu.postech.aadl.synch"
             class="edu.postech.aadl.synch.wizard.RtmAadlPropertyWizard"
             id="edu.postech.aadl.synch.wizard.RtmAadlPropertyWizard">
       </wizard>
    </extension>
+
+
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="edu.postech.aadl.maude.preferences.MaudePrefPage"
+            id="edu.postech.maude.preferences.page"
+            name="Maude Preferences">
+      </page>
+   </extension>
+    <extension point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="edu.postech.aadl.maude.preferences.MaudePrefInitializer">
+      </initializer>
+  </extension>
+  
+
+   <extension
+         point="org.eclipse.ui.commands">
+      <category
+            id="HybridSynchAadlMenu.commands.category"
+            name="Sample Category">
+      </category>
+      <command
+            categoryId="HybridSynchAadlMenu.commands.category"
+            name="Constraints Check"
+            id="HybridSynchAadlMenu.commands.constraintsCheck">
+      </command>
+      <command
+            categoryId="HybridSynchAadlMenu.commands.category"
+            name="Code Generation"
+            id="HybridSynchAadlMenu.commands.codeGeneration">
+      </command>
+      <command
+            categoryId="HybridSynchAadlMenu.commands.category"
+            name="Symbolic Analysis"
+            id="HybridSynchAadlMenu.commands.symbolicAnalysis">
+      </command>
+   </extension>
+   
+   
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="edu.postech.aadl.menu.ConstraintChecker"
+            commandId="HybridSynchAadlMenu.commands.constraintsCheck">
+			<enabledWhen>
+			    <with variable="activeEditorId">
+			        <equals value="edu.postech.aadl.xtext.propspec.PropSpec"/>
+			    </with>
+			</enabledWhen>
+      </handler>
+      <handler
+            class="edu.postech.aadl.menu.CodeGeneration"
+            commandId="HybridSynchAadlMenu.commands.codeGeneration">
+			<enabledWhen>
+			    <with variable="activeEditorId">
+			        <equals value="edu.postech.aadl.xtext.propspec.PropSpec"/>
+			    </with>
+			</enabledWhen>
+      </handler>
+      <handler
+            class="edu.postech.aadl.menu.SymbolicAnalysis"
+            commandId="HybridSynchAadlMenu.commands.symbolicAnalysis">
+			<enabledWhen>
+			    <with variable="activeEditorId">
+			        <equals value="edu.postech.aadl.xtext.propspec.PropSpec"/>
+			    </with>
+			</enabledWhen>
+      </handler>
+   </extension>
+   
+   
+   <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="HybridSynchAadlMenu.commands.constraintsCheck"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            contextId="org.eclipse.ui.contexts.window"
+            sequence="M1+5">
+      </key>
+      <key
+            commandId="HybridSynchAadlMenu.commands.codeGeneration"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            contextId="org.eclipse.ui.contexts.window"
+            sequence="M1+6">
+      </key>
+      <key
+            commandId="HybridSynchAadlMenu.commands.symbolicAnalysis"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            contextId="org.eclipse.ui.contexts.window"
+            sequence="M1+7">
+      </key>
+   </extension>
+   
+   
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
+         <menu
+               id="HybridSynchAadlMenu.menus.simpleMenu"
+               label="HybridSynchAADL Verifier"
+               mnemonic="M">
+            <command
+                  commandId="HybridSynchAadlMenu.commands.constraintsCheck"
+                  id="HybridSynchAadlMenu.menus.constraintsCheck"
+                  mnemonic="S">
+            </command>
+            <command
+                  commandId="HybridSynchAadlMenu.commands.codeGeneration"
+                  id="HybridSynchAadlMenu.menus.codeGeneration"
+                  mnemonic="S">
+            </command>
+            <command
+                  commandId="HybridSynchAadlMenu.commands.symbolicAnalysis"
+                  id="HybridSynchAadlMenu.menus.symbolicAnalysis"
+                  mnemonic="S">
+            </command>
+         </menu>
+      </menuContribution>
+   </extension>
+
+
+   <extension
+         point="org.eclipse.ui.views">
+      <category
+            name="HybridSynchAADL Result"
+            id="edu.postech.maude.view">
+      </category>
+      <view
+            id="edu.postech.maude.view.views.MaudeConsoleView"
+            name="HybridSynchAADL Result"
+            icon="icons/sample.png"
+            class="edu.postech.aadl.view.HybridSynchAADLView"
+            category="edu.postech.maude.view"
+            inject="true">
+      </view>
+   </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="org.eclipse.jdt.ui.JavaPerspective">
+         <view
+               id="edu.postech.maude.view.views.MaudeConsoleView"
+               relative="org.eclipse.ui.views.ProblemView"
+               relationship="right"
+               ratio="0.5">
+         </view>
+      </perspectiveExtension>
+   </extension>
+
 
 </plugin>
